# KOVAL

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.test  README.md  docker-compose.test.yml  docker-compose.yml  koval.toml  koval_code.txt  koval_docs.txt  merge_files.py  test_install.sh
cli/: Cargo.toml
cli/src/: client.rs  config.rs  main.rs  output.rs
docs/: api.md  architecture.md  cli.md  development.md  gpu_compilation_research.md  koval-toml.md  probe.md  roadmap.md
ideas/: gpu_compilation_research.md
probe/: Cargo.toml
probe/src/: cpu.rs  gpu.rs  main.rs  memory.rs  numa.rs  storage.rs
schema/: Cargo.toml
schema/src/: lib.rs
server/: Cargo.toml
server/src/: auth.rs  cache.rs  db.rs  forge.rs  main.rs  pgo.rs  queue.rs  targets.rs  webhook.rs  worker.rs
server/src/assets/: install.sh  probe_aarch64  probe_armv6  probe_i686  probe_x86_64
server/src/routes/: binary.rs  build.rs  install.rs  jobs.rs  mod.rs  pgo.rs  status.rs  tokens.rs  ui.rs  webhooks.rs
server/static/: index.html
