[package]
name = "koval-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "koval"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
schema = { path = "../schema" }
