[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
schema = { path = "../schema" }
tokio = { version = "1.38", features = ["full"] }
axum = { version = "0.7", features = ["multipart"] }
rusqlite = { version = "0.31", features = ["bundled"] }
bcrypt = "0.15"
toml = "0.8"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.5"
tower-http = { version = "0.5", features = ["fs", "trace"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
hmac = "0.12"
